[package]
name = "generik"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = {version = "0.4.43", features = ["serde"]}
gloo-net = "0.6.0"
js-sys = "0.3.85"
leptos = "0.8.15"
leptos_router = "0.8.11"
serde = "1.0.228"
serde-lite = "0.5.1"
serde_json = "1.0.149"
uuid = { version = "1.19.0", features = ["serde"]}
wasm-bindgen = "0.2.108"
wasm-bindgen-futures = "0.4.58"
web-sys = {version = "0.3.85", features = ["Element", "DomRect", "HtmlDocument", "IntersectionObserver", "IntersectionObserverEntry", "IntersectionObserverInit", "ScrollBehavior", "ScrollToOptions", "Performance", "Window", "VisualViewport"]}
