[package]
name = "generik_layout"
version = "0.1.0"
edition = "2024"
description = "Swiss/editorial layout components for Leptos: responsive 12-col grid, stack, cluster, sidebar, center, masonry. Self-contained CSS, no Tailwind required."
license = "MIT"

[dependencies]
leptos = "0.8.15"
generik_css_macros = { path = "../generik_css_macros" }
[dev-dependencies]
lightningcss = { version = "1.0.0-alpha.71", default-features = false }